remove whitespace and fix navbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,10 +12,14 @@
     text-transform: uppercase;
   }
   flex: 1;
-  margin: 16px;
+  padding: 16px;
+  padding-bottom: 100px;
+  background: $primary;
   color: $accent;
 }
 .bottom-nav {
+  position: fixed;
+  bottom: 0;
   justify-content: space-around;
   button {
     height: 100%;
