--- a/src/app/pages/timer/timer.component.scss
+++ b/src/app/pages/timer/timer.component.scss
@@ -23,7 +23,7 @@
   button {
     padding: 1rem 2rem;
     min-width: 14rem;
-    margin: 0 16px;
+    margin: 16px;
     text-transform: uppercase;
   }
 }
